[package]
name = "fluxion"
version = "0.0.5"
edition = "2024"
description = "ECS based Web framework"
license = "MIT"
repository = "https://github.com/rustyrs/fluxion"


[dependencies]
bevy_ecs = { version = "0.18.1", features = ["debug"] }
futures-util = "0.3.32"
tokio = { version = "1.50.0", features = ["full"] }
tokio-tungstenite = "0.29.0"
wtransport = { version = "0.7.0", features = ["self-signed"] }
